--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>html, css, js... 4</title>
+    <title>TEXTUTILS</title>
     <link rel="icon" href="favicon-16x16.png">
 </head>
 <!-- dark class for darkmode -->
